Index Full bleed fix

--- a/styles.css
+++ b/styles.css
@@ -569,9 +569,11 @@ header {
     height: 100vh;
     width: auto;
     padding: 30%;
-    z-index: 1;
 }
 
+.mdl_fullbleed img {
+    z-index: 1;
+}
 
 .mdl_fullbleed_text {
     position: absolute;
